Added parts of AboutAuthor

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -25,7 +25,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <include layout="@layout/content_about" />
+        <FrameLayout
+            android:id="@+id/about_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </FrameLayout>
     </ScrollView>
 
 </LinearLayout>
