--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:statusBarBackground="@android:color/transparent"
-    tools:context=".ui.main.activities.ChoiceActivity">
+    tools:context=".ui.activities.ChoiceActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
