--- a/app/src/main/res/layout/card_support_development.xml
+++ b/app/src/main/res/layout/card_support_development.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:focusable="true"
             android:minHeight="@dimen/about_listitem_height"
             android:gravity="center_vertical"
@@ -76,7 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:clickable="true"
+            android:clickable="true" android:foreground="?android:attr/selectableItemBackground"
             android:gravity="center_vertical"
 
             android:orientation="horizontal"
