--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".ui.main.activities.AboutActivity"
+    tools:context=".ui.activities.AboutActivity"
     tools:showIn="@layout/activity_about">
 
     <include
