--- a/app/src/main/res/layout/fragment_impressum.xml
+++ b/app/src/main/res/layout/fragment_impressum.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:attr/windowBackground"
-    tools:context=".ui.main.fragments.ImpressumFragment">
+    tools:context=".ui.fragments.ImpressumFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
