--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -7,10 +7,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:forceDarkAllowed">true</item>
         <item name="android:windowBackground">@android:color/black</item>
-        <item name="android:itemBackground">@android:color/black</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:popupBackground">@android:color/black</item>
-        <item name="android:background">@android:color/black</item>
+        <!--        <item name="android:textColor">@android:color/white</item>-->
+        <item name="webPageBackground">@color/web_background_homepages_dark</item>
     </style>
 
 </resources>
