--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="rectSelector">@drawable/rect_selector_dark</item>
+        <item name="webPageBackground">@color/web_background_homepages</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
