--- a/app/src/main/res/layout/fragment_fifthchoice.xml
+++ b/app/src/main/res/layout/fragment_fifthchoice.xml
@@ -24,7 +24,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="@dimen/choice_difference"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="?attr/colorAccent"
             android:text="@string/choice_add_course"
             android:textColor="@android:color/white" />
 
