--- a/app/src/main/res/layout/list_vertretung_specific_entry.xml
+++ b/app/src/main/res/layout/list_vertretung_specific_entry.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
         android:layout_weight="@integer/vertretung_specific_entry_hour"
-        android:background="@color/colorAccent"
+        android:background="?attr/colorAccent"
         android:gravity="center"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
