--- a/app/src/main/res/layout/widget_body.xml
+++ b/app/src/main/res/layout/widget_body.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/colorAccent"
+        android:background="?attr/colorAccent"
         android:gravity="center|center_vertical"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -43,7 +43,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center|center_vertical"
-        android:textColor="@color/colorAccent"
+        android:textColor="?attr/colorAccent"
         android:textSize="22sp"
         android:textStyle="bold"
         android:visibility="visible" />
