--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -20,6 +20,12 @@
         android:layout_marginBottom="8dp" />
 
     <include
+        layout="@layout/card_legal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp" />
+
+    <include
         layout="@layout/card_support_development"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
