--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,19 @@
         <item name="android:windowBackground">@drawable/launch_screen</item>
     </style>
 
+    // define a custom style
+
+    <style name="CustomAboutLibrariesStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!--        &lt;!&ndash; AboutLibraries specific values &ndash;&gt;-->
+        <!--        <item name="aboutLibrariesWindowBackground">?android:colorBackground</item>-->
+        <!--        <item name="aboutLibrariesCardBackground">?cardBackgroundColor</item>-->
+        <!--        <item name="aboutLibrariesDescriptionTitle">?android:textColorPrimary</item>-->
+        <!--        <item name="aboutLibrariesDescriptionText">?android:textColorSecondary</item>-->
+        <!--        <item name="aboutLibrariesDescriptionDivider">@color/opensource_divider</item>-->
+        <!--        <item name="aboutLibrariesOpenSourceTitle">?android:textColorPrimary</item>-->
+        <!--        <item name="aboutLibrariesOpenSourceText">?android:textColorSecondary</item>-->
+        <!--        <item name="aboutLibrariesSpecialButtonText">?android:textColorPrimary</item>-->
+        <!--        <item name="aboutLibrariesOpenSourceDivider">@color/opensource_divider</item>-->
+    </style>
+
 </resources>
