--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -25,10 +25,8 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_language"
-
         android:orderInCategory="100"
         android:title="@string/menu_language"
-
         app:showAsAction="never" />
     <item
         android:id="@+id/action_profiles"
@@ -44,6 +42,7 @@
         android:id="@+id/action_impressum"
         android:orderInCategory="100"
         android:title="@string/menu_impressum"
+        android:visible="false"
         app:showAsAction="never" />
 
 </menu>
