--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,13 +16,13 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="?attr/popupMenuStyle" />
 
         <Spinner
             android:id="@+id/main_profile_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:popupTheme="?attr/popupMenuStyle"
             android:visibility="gone"
             android:enabled="false"
             android:popupBackground="?android:attr/windowBackground" />
