--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,14 +8,46 @@
         <item name="webPageBackground">@color/web_background_homepages</item>
     </style>
 
+    <style name="AppTheme.Light" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="webPageBackground">@color/web_background_homepages</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="md_dark_theme">false</item>
+        <item name="cardBackgroundColor">@color/md_white_1000</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        <item name="popupMenuStyle">@style/ThemeOverlay.AppCompat.Light</item>
+    </style>
+
+    <style name="AppTheme.Dark" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="webPageBackground">@color/web_background_homepages_dark</item>
+        <item name="android:forceDarkAllowed">true</item>
+        <item name="popupMenuStyle">@style/ThemeOverlay.AppCompat.Dark</item>
+    </style>
+
+    <style name="AppTheme.Black" parent="AppTheme.Dark">
+        <item name="android:windowBackground">@android:color/black</item>
+        <item name="cardBackgroundColor">@color/md_grey_900</item>
+        <item name="md_background_color">@color/md_grey_900</item>
+        <item name="popupMenuStyle">@style/PopupMenuBlack</item>
+    </style>
+
+    <style name="PopupMenuBlack" parent="@style/ThemeOverlay.AppCompat.Dark">
+        <item name="android:itemBackground">@android:color/black</item>
+        <item name="android:windowBackground">@android:color/black</item>
+    </style>
+
     <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight" />
 
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/launch_screen</item>
