--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -8,6 +8,7 @@
         <change>Impressum überarbeitet</change>
         <change>Notenverwaltung gefixed</change>
         <change>Farbenauswahl (Beta)</change>
+        <change>Bugfixes</change>
     </release>
     <release
         version="1.1"
