--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,7 +3,7 @@
     <release
         version="1.1.1"
         versioncode="111">
-        <change>Dark Mode</change>
+        <change>Dark Mode (Themeauswahl)</change>
         <change>Einführung hinzugefügt</change>
         <change>Impressum überarbeitet</change>
         <change>Notenverwaltung gefixed</change>
