--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,10 +4,12 @@
         <item>@string/set_theme_light</item>
         <item>@string/set_theme_dark</item>
         <item>@string/set_theme_black</item>
+        <item>@string/set_theme_auto</item>
     </string-array>
     <string-array name="theme_array_values">
         <item>light</item>
         <item>dark</item>
         <item>black</item>
+        <item>switch</item>
     </string-array>
 </resources>
