--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,11 +3,12 @@
     <release
         version="1.1.1"
         versioncode="111">
-        <change>Dark Mode (Themeauswahl)</change>
         <change>Einführung hinzugefügt</change>
         <change>Impressum überarbeitet</change>
+        <change>Dark Mode (Themeauswahl)</change>
         <change>Notenverwaltung gefixed</change>
         <change>Farbenauswahl (Beta)</change>
+        <change>Benachrichtigung über fehlendes Internet (-> Nutzung des Offlinemodus)</change>
         <change>Bugfixes</change>
     </release>
     <release
